--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://aba5sdmaaaaaaaamdgp3ryzabcel7.otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/1koccf0pf1/out/v1/190f1d69a3d5467f8fb7d9df4339bc49/cenc.mpd";
-    const keyId = "cb8daf414566aa17d06f8294f3f3b444";
-    const key = "89d58908a57d70ef87bf16c9b5821ca2";
+    const manifest = "https://in-tvod.bmscdn.com/c9eeecdca88449e6a3531561633347e0/dash/bxG7uD0M4PCXG0dYZeMJ/9qMrmgmgfG-FJWBeqcv9.mpd";
+    const keyId = "c816765233486821faa544d6e4e52f45";
+    const key = "67889d89edd2f8dcda5f2264511ce606";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
