--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://in-tvod.bmscdn.com/c9eeecdca88449e6a3531561633347e0/dash/bxG7uD0M4PCXG0dYZeMJ/9qMrmgmgfG-FJWBeqcv9.mpd";
-    const keyId = "c816765233486821faa544d6e4e52f45";
-    const key = "67889d89edd2f8dcda5f2264511ce606";
+    const manifest = "https://abmyxykaaaaaaaamkyvb65fuqebyg.7a77200bf98444ac997a89ed83775793.emt.cf.ww.aiv-cdn.net/iad-nitro/live/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd";
+    const keyId = "1779c27b9d077a3ba0c9cc1bb9a94b9f";
+    const key = "cc5cf3b7928fb9e0a1ee6a8b566f0a8e";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
