--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://abmyxykaaaaaaaamkyvb65fuqebyg.7a77200bf98444ac997a89ed83775793.emt.cf.ww.aiv-cdn.net/iad-nitro/live/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd";
-    const keyId = "1779c27b9d077a3ba0c9cc1bb9a94b9f";
-    const key = "cc5cf3b7928fb9e0a1ee6a8b566f0a8e";
+    const manifest = "https://aba5sdmaaaaaaaammj2q5nkaoee4b.otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/l2xzhgmjur/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
+    const keyId = "4a5191838da17a2ab771f4258fad347f";
+    const key = "54b7a084437459368eed07d182ad644c";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
