--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://abhvfwoaaaaaaaamge5xi5icfzq64.otte.live.cf.ww.aiv-cdn.net/iad-nitro/live/clients/dash/enc/xjrxodbgeh/out/v1/69b95861163a42d9a34a1d4ceece7a7a/cenc.mpd";
-    const keyId = "867ab2da044bcc1e4cc1a9252b03ce3e";
-    const key = "0db59352d361b0a132c0a64bb231750a";
+    const manifest = "https://a201aivottlinear-a.akamaihd.net/OTTB/pdx-nitro/live/clients/dash/enc/xko28jj0cp/out/v1/190f1d69a3d5467f8fb7d9df4339bc49/cenc.mpd";
+    const keyId = "7aa124253d518f18740c5bd932d581a3";
+    const key = "1819c82fc27225f5e79ae189ddece0ea";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
