--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://a201aivottlinear-a.akamaihd.net/OTTB/bom-nitro/live/clients/dash/enc/ykmt22pk8m/out/v1/190f1d69a3d5467f8fb7d9df4339bc49/cenc.mpd";
-    const keyId = "7aa124253d518f18740c5bd932d581a3";
-    const key = "1819c82fc27225f5e79ae189ddece0ea";
+    const manifest = "/cenc.mpd";
+    const keyId = "4a5191838da17a2ab771f4258fad347f";
+    const key = "54b7a084437459368eed07d182ad644c";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
