--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "/cenc.mpd";
+    const manifest = "https://a201aivottlinear-a.akamaihd.net/OTTB/lhr-nitro/clients/dash/enc/9zdhmclf6e/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
     const keyId = "4a5191838da17a2ab771f4258fad347f";
     const key = "54b7a084437459368eed07d182ad644c";
 
