--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://a201aivottlinear-a.akamaihd.net/OTTB/lhr-nitro/clients/dash/enc/9zdhmclf6e/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
-    const keyId = "4a5191838da17a2ab771f4258fad347f";
-    const key = "54b7a084437459368eed07d182ad644c";
+    const manifest = "https://otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/rkyxparx1t/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
+    const keyId = "494c5ddd4a2b9c38da05e053c0fd6d3f";
+    const key = "ad1ff8c72fc6fefbce716609da9347cf";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
