--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/rkyxparx1t/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
-    const keyId = "494c5ddd4a2b9c38da05e053c0fd6d3f";
-    const key = "ad1ff8c72fc6fefbce716609da9347cf";
+    const manifest = "https://a120aivottepl-a.akamaihd.net/pdx-nitro/live/clients/dash/enc/2ldruyhiok/out/v1/e6aaa1b986d0434b95156e22db44eb71/cenc.mpd";
+    const keyId = "8e73c8415d7648e10b06000b1ace5953";
+    const key = "f5d649bf1495cd0864a7422624ac5a86";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
