--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://a120aivottepl-a.akamaihd.net/pdx-nitro/live/clients/dash/enc/2ldruyhiok/out/v1/e6aaa1b986d0434b95156e22db44eb71/cenc.mpd";
-    const keyId = "8e73c8415d7648e10b06000b1ace5953";
-    const key = "f5d649bf1495cd0864a7422624ac5a86";
+    const manifest = "https://ablayc7aaaaaaaamjadq6qgmrvpao.otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/knd7y1u4mu/out/v1/e6aaa1b986d0434b95156e22db44eb71/cenc.mpd?amznDtid=AOAGZA014O5RE&encoding=segmentBase|drmScheme=clearkey&drmLicense=9cb6b6283487afe392adcffebf3cd6be:05f4eb67381e0c173954603518ce84c3";
+    const keyId = "";
+    const key = "";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
