--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Player</title>
+  <title>ICC Champions Trophy</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
@@ -24,7 +24,7 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://ablayc7aaaaaaaamjadq6qgmrvpao.otte.live.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/knd7y1u4mu/out/v1/e6aaa1b986d0434b95156e22db44eb71/cenc.mpd?amznDtid=AOAGZA014O5RE&encoding=segmentBase|drmScheme=clearkey&drmLicense=9cb6b6283487afe392adcffebf3cd6be:05f4eb67381e0c173954603518ce84c3";
+    const manifest = "https://jcevents.akamaized.net/bpk-tv/JC_Sports18_1HD/JCHLS/hdntl=exp=1741585633~acl=%2f*~id=97ff5c734c6f4a3ea96b01cfd44846cc~data=hdntl~hmac=db0dbae6b8d53b386b4bc9848af7139235c4f2c36e1bc9ee44971a36249f2c20/JC_Sports18_1HD-audio_108038_eng=108000-video=3728000.m3u8;Team-BingeMe";
     const keyId = "";
     const key = "";
 
