--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://jcevents.akamaized.net/bpk-tv/JC_Sports18_1HD/JCHLS/hdntl=exp=1741585633~acl=%2f*~id=97ff5c734c6f4a3ea96b01cfd44846cc~data=hdntl~hmac=db0dbae6b8d53b386b4bc9848af7139235c4f2c36e1bc9ee44971a36249f2c20/JC_Sports18_1HD-audio_108038_eng=108000-video=3728000.m3u8";
-    const keyId = "";
-    const key = "";
+    const manifest = "https://a170aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/1jii7mxinw/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
+    const keyId = "553a8e7efc48840b17d03797c023d9b6";
+    const key = "05fa313fa73df33f19e0f2d3d047bbaf";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
