--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://a170aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/1jii7mxinw/out/v1/fe9782633a364a6a84c9410f26d9b2c4/cenc.mpd";
-    const keyId = "553a8e7efc48840b17d03797c023d9b6";
-    const key = "05fa313fa73df33f19e0f2d3d047bbaf";
+    const manifest = "https://v18tataplaysyndication.akamaized.net/bpk-tv/Colors_Cineplex_SD_voot_MOB/output03/index.m3u8?hdnea=exp=1742146376~acl=/*~hmac=cdd3bab730e480ee53efcd841a12be2e849959cd78bfb9e3686d3027ee9afdb1";
+    const keyId = "";
+    const key = "";
 
     function waitForJWPlayer(callback) {
       if (typeof jwplayer === 'function') {
