--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743329188~acl=/*~hmac=2e5e99b1f5fffbedb82717dd9cc7d59fc00a335b3f66658a9a9cd0499f37e077";
+    const manifest = "https://livetv-push.hotstar.com/dash/live/2002466-b/sshindiwv/master.mpd?|cookie=hdntl=exp=1748005893~acl=*sshindi*~id=7e881f1c117029d190f0324fd043eb81~data=hdntl~hmac=5c305d6a42995f151a36caed8aca318451faf5f57ff98ac335c2ab27af25b57b&User-agent=Hotstar%3Bin.startv.hotstar%2F25.02.24.8.11169+%28Android%2F15%29&drmScheme=clearkey&drmLicense=fe7718fbb3fb4ba78c07cc0f578744e6:624e24b1843b459fab0a949609416f0d";
     const keyId = "";
     const key = "";
 
