--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ICC Champions Trophy</title>
+  <title>dvrajput</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
@@ -24,7 +24,7 @@
 <body>
   <div id="jwplayerDiv"></div>
   <script type="text/javascript">
-    const manifest = "https://livetv-push.hotstar.com/dash/live/2002466-b/sshindiwv/master.mpd?|cookie=hdntl=exp=1748005893~acl=*sshindi*~id=7e881f1c117029d190f0324fd043eb81~data=hdntl~hmac=5c305d6a42995f151a36caed8aca318451faf5f57ff98ac335c2ab27af25b57b&User-agent=Hotstar%3Bin.startv.hotstar%2F25.02.24.8.11169+%28Android%2F15%29&drmScheme=clearkey&drmLicense=fe7718fbb3fb4ba78c07cc0f578744e6:624e24b1843b459fab0a949609416f0d";
+    const manifest = "https://sony247channels.akamaized.net/hls/live/2020591-b/TEN3HD/hdntl=exp=1750487345~acl=%2f*~id=5fc1dba3-e83d-4482-98af-d4d5546cc265~data=hdntl~hmac=258501a0d8e6e75f402d2c3fcf3e7e341a15d2e1146a872d37aef0c7047eb4cd/master_3500.m3u8";
     const keyId = "";
     const key = "";
 
